webadmin: fixed right-click context menu spacing
PatternFly patch caused the right-click context menu spacing to be 2 pixels too much.
Fixed.

--- a/frontend/webadmin/modules/webadmin/src/main/resources/org/ovirt/engine/ui/webadmin/public/WebAdmin.css
+++ b/frontend/webadmin/modules/webadmin/src/main/resources/org/ovirt/engine/ui/webadmin/public/WebAdmin.css
@@ -109,3 +109,8 @@ a.gwt-InlineHyperlink,a.gwt-Anchor {
 .gwt-PopupPanelGlass {
     z-index: 1;
 }
+
+/* right click menu spacing */
+.gwt-MenuBar .gwt-MenuItem {
+    padding: 0 10px !important;
+}
